--- a/databases/myBase.properties
+++ b/databases/myBase.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.6.0
-#Wed Mar 08 15:59:58 CET 2023
-tx_timestamp=2970
+#HSQL Database Engine 2.7.0
+#Wed Mar 22 07:48:11 UTC 2023
 modified=yes
-version=2.6.0
+tx_timestamp=8759
+version=2.7.0
